# toxic-news

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CNAME  Dockerfile  README.md  about.html  app.py  daily.html  data.js  docker-compose.yml  index.html  pyproject.toml  style.css  tailwind.config.js
.github/workflows/: backend.yaml  deploy-on-tag.yaml  fetch-today.yaml  update-frontend-today.yaml  update_frontend.yaml
averages/: 30.csv  7.csv  90.csv  all.csv  year.csv
daily/2022/01/: 01.csv  02.csv  03.csv  04.csv  05.csv  06.csv  07.csv  08.csv  09.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  30.csv  31.csv
daily/2022/02/: 01.csv  02.csv  03.csv  04.csv  05.csv  06.csv  07.csv  08.csv  09.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv
daily/2022/03/: 01.csv  02.csv  03.csv  04.csv  05.csv  06.csv  07.csv  08.csv  09.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  30.csv  31.csv
daily/2022/04/: 01.csv  02.csv  03.csv  04.csv  05.csv  06.csv  07.csv  08.csv  09.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  30.csv
daily/2022/05/: 01.csv  02.csv  03.csv  04.csv  05.csv  06.csv  07.csv  08.csv  09.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  30.csv  31.csv
daily/2022/06/: 01.csv  02.csv  03.csv  04.csv  05.csv  06.csv  07.csv  08.csv  09.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  30.csv
daily/2022/07/: 01.csv  02.csv  03.csv  04.csv  05.csv  06.csv  07.csv  08.csv  09.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  30.csv  31.csv
daily/2022/08/: 01.csv  02.csv  03.csv  04.csv  05.csv  06.csv  07.csv  08.csv  09.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  30.csv  31.csv
daily/2022/09/: 01.csv  02.csv  03.csv  04.csv  05.csv  06.csv  07.csv  08.csv  09.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  30.csv
daily/2022/10/: 01.csv  02.csv  03.csv  04.csv  05.csv  06.csv  07.csv  08.csv  09.csv  (+22 more)
notebooks/: Untitled.ipynb
tests/: conftest.py  test_app.py  test_fetchers.py  test_models.py  test_queries.py
toxic_news/: __about__.py  build.py  fetchers.py  generate.py  main.py  models.py  newspapers.py  queries.py  run.py
toxic_news/assets/: newspapers.csv
toxic_news/templates/: about.html  daily.html  footer.html  header.html  index.html  style.css
(+510 files in other folders)
